--- a/dwm.desktop
+++ b/dwm.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Dwm
+Name=DWM
 Comment=Dynamic window manager
-TryExec=dwm
 Exec=dwm
 Icon=dwm
-Type=Application
+Type=XSession
